--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.dataScience.jupyterServerURI": "local",
-    "python.pythonPath": "C:\\Users\\RonDagdag\\anaconda3\\envs\\my_conda\\python.exe"
+    "python.pythonPath": "C:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Python37_64\\python.exe"
 }
